// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header menu test Should hide menu should match snapshot 1`] = `
<div>
  <div
    class="App-header"
  >
    true
    <span>
      Execution Report
    </span>
  </div>
</div>
`;

exports[`Should match snapshot 1`] = `
<div
  class="App-header"
>
  <a
    class="icon"
  >
    ☰
  </a>
  <span>
    Test Heading
  </span>
</div>
`;
